Added skeleton/faux loading to servers pages

--- a/ui/modules/multiplayer/favorites.partial.html
+++ b/ui/modules/multiplayer/favorites.partial.html
@@ -61,6 +61,54 @@
 			</tr>
 		</thead>
 		<tbody id="serversTableBody">
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
 		</tbody>
 	</table>
 
