--- a/ui/modules/multiplayer/featured.partial.html
+++ b/ui/modules/multiplayer/featured.partial.html
@@ -62,7 +62,54 @@
 			</tr>
 		</thead>
 		<tbody id="serversTableBody">
-
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
+			<tr><td class="loading-shimmer" colspan="4"></td></tr>
 		</tbody>
 	</table>
 
