--- a/ui/modules/apps/BeamMP-PlayerList/app.html
+++ b/ui/modules/apps/BeamMP-PlayerList/app.html
@@ -83,6 +83,9 @@
 			background-color: rgba(0, 0, 0, 0);
 			cursor:pointer;
 		}
+		table#players-table > tbody > tr:nth-child(even) {
+			background-color: rgba(255, 255, 255, 0.25);
+		}
 	</style>
 	<div id="main-container">
 		<div id="plist-container">
