Fixed URL clicking / Opening :)

--- a/ui/modules/multiplayer/multiplayer.html
+++ b/ui/modules/multiplayer/multiplayer.html
@@ -72,7 +72,7 @@
           {{:: 'ui.multiplayer.wiki' | translate}}
         </md-button>
 
-        <md-button id="forum-btn" onclick="openForumLink()" ng-class="" style="text-align:left;">
+        <md-button id="forum-btn" onclick="openForumLink(`https://forum.beammp.com`)" ng-class="" style="text-align:left;">
           <md-icon class="material-icons">web</md-icon>
 				  {{:: 'ui.multiplayer.forum' | translate}}
         </md-button>
