Fix servers not loading due to map selection

--- a/ui/modules/multiplayer/servers.partial.html
+++ b/ui/modules/multiplayer/servers.partial.html
@@ -25,7 +25,7 @@
 			</md-checkbox>
 
 
-			<md-select id="map-select" ng-model="multiplayermenu.selectMap" placeholder="All" class="md-no-underline dropdown" ng-change="multiplayermenu.repopulate();">
+			<md-select id="map-select" ng-model="multiplayermenu.selectMap" placeholder="Any" class="md-no-underline dropdown" ng-change="multiplayermenu.repopulate();">
 				<md-tooltip md-direction="right">
 					{{:: 'ui.multiplayer.mapFilterTooltip' | translate}}
 				</md-tooltip>
