--- a/ui/modules/multiplayer/login.partial.html
+++ b/ui/modules/multiplayer/login.partial.html
@@ -12,6 +12,10 @@
 					<md-button class="button" ng-click="switchConnection()">{{:: 'ui.multiplayer.playAsGuest' | translate}}</md-button>
 					<md-button class="button" onclick="openExternalLink('https://forum.beammp.com/signup')">{{:: 'ui.multiplayer.register' | translate}}</md-button>
 				</div>
+				</em>
+					Want to register for an account? Then go to<br>forum.beammp.com and,
+					once there, look <br> to the top right of the page and click "Sign Up".
+				</em>
 			</form>
 			<form id="GuestContainer" style="display: none;">
 				<h3 class="text-white">{{:: 'ui.multiplayer.guestDescription1' | translate}}</h3>
