--- a/ui/modules/multiplayer/multiplayer.html
+++ b/ui/modules/multiplayer/multiplayer.html
@@ -40,14 +40,19 @@
 		      {{:: 'ui.multiplayer.servers' | translate}}
         </md-button>
 
+        <md-button id="feat-servers-btn" ng-class="{'md-primary md-raised': (multiplayer.stateName.indexOf('multiplayer.featured') !== -1)}" ui-sref="menu.multiplayer.featured" style="text-align:left;">
+          <md-icon class="material-icons">star</md-icon>
+		      {{:: 'ui.multiplayer.featured' | translate}}
+        </md-button>
+
         <md-button id="servers-btn" ng-class="{'md-primary md-raised': (multiplayer.stateName.indexOf('multiplayer.official') !== -1)}" ui-sref="menu.multiplayer.official" style="text-align:left;">
           <md-icon class="material-icons">desktop_windows</md-icon>
 		      {{:: 'ui.multiplayer.official' | translate}}
         </md-button>
 
-        <md-button id="feat-servers-btn" ng-class="{'md-primary md-raised': (multiplayer.stateName.indexOf('multiplayer.featured') !== -1)}" ui-sref="menu.multiplayer.featured" style="text-align:left;">
-          <md-icon class="material-icons">star</md-icon>
-		      {{:: 'ui.multiplayer.featured' | translate}}
+        <md-button id="part-servers-btn" ng-class="{'md-primary md-raised': (multiplayer.stateName.indexOf('multiplayer.partner') !== -1)}" ui-sref="menu.multiplayer.partner" style="text-align:left;">
+          <md-icon class="material-icons">public</md-icon>
+		      {{:: 'ui.multiplayer.partner' | translate}}
         </md-button>
 
         <md-button id="favorites-btn" ng-class="{'md-primary md-raised': (multiplayer.stateName.indexOf('multiplayer.favorites') !== -1)}" ui-sref="menu.multiplayer.favorites" style="text-align:left;">
