--- a/ui/modules/apps/BeamMP-Chat/app.html
+++ b/ui/modules/apps/BeamMP-Chat/app.html
@@ -1,98 +1,180 @@
 <div ng-controller="Chat" id="Chat" class="bngApp multiplayerChat" ng-style="{'width': '100%', 'height': '100%', 'background-color': 'transparent'}" ng-init="init()">
 	<style>
-		.error {
-			color: red;
-		}
-		#chat-window {
-			display: flex;
-			flex-direction: column;
-			height:100%;
-			width:100%;
-			font-size:1em;
-			font-family: sans-serif, Arial, Helvetica;
-		}
-		#chat-input {
-			width:100%;
-			height:auto;
-			background-color:rgba(0, 0, 0, 0.25);
-			border: 2px solid rgba(175, 175, 175, 0.45);
-			padding-left: 5px;
-			color:white;
-			transition: 0.20s;
-		}
-		#chat-input::placeholder {
-			color: #DDDDDD;
-		}
-		#chat-input:hover {
-			background-color:rgba(0, 0, 0, 0.5);
-		}
-		.buttons {
-			color: #DDDDDD;
-			border: 2px solid rgba(175, 175, 175, 0.45);
-			transition: 0.20s;
-			background-color:rgba(0, 0, 0, 0.45);
-			height:100%;
-		}
-		.buttons:hover {
-			background-color:rgba(0, 0, 0, 0.65);
-			color: #FFFFFF;
-		}
+
+		/*Error Message*/
+        .error {
+            color:#f04747; /* Discord red */
+            border-radius: 10px;
+        }
+
+        /* Chat Window */
+        #chat-window {
+            flex-direction: column;
+            align-items: flex-start;
+            padding: 20px;
+            background: rgba(54, 57, 63, 0.75); /* Discord dark theme with alpha adjustments. */
+            border-radius: 10px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            max-width: 600px;
+            margin: 0 auto;
+            font-family: 'Segoe UI', sans-serif;
+        }
+
+        /* Chat Input */
+        #chat-input {
+            width: 100px;
+            transition: width 1s;
+            height: 40px;
+            border: none;
+            border-radius: 10px;
+            padding: 0 15px;
+            margin-right: 5px;
+            margin-left: 5px;
+            font-size: 14px;
+            background-color: #40444b; /* Discord input background */
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            transition: width 1s ease-in-out;
+            color: #ffffff; /* Text color */
+        }
+
+        /* Chat Input Focus */
+        /* Show chat window when the input is focused or chat window is hovered */
+        #chat-input:focus + #chat-window,#chat-window:hover {
+            display: flex;
+        }
+
+        /* Placeholder color */
+        #chat-input::placeholder {
+            color: #72767d;
+        }
+
+        /* Hover styles for input */
+        #chat-input:hover {
+            width: calc(100% - 120px);
+        }
+
+        /* Swap Buttons */
+        .buttons {
+            width: 40px;
+            height: 40px;
+            font-size: 16px;
+            background-color: #7289da; /* Discord brand color */
+            color: #fff;
+            cursor: pointer;
+            transition: background-color 0.25s ease-in-out;
+            margin-right: 5px;
+            margin-left: 5px;
+            border: none;
+            border-radius: 10px;
+        }
+
+        /* Send Button */
+        #send-button {
+            width: 50px;
+            border: none;
+            border-radius: 10px;
+            height: 40px;
+            margin-right: 5px;
+            margin-left: 5px;
+            background-color: #7289da; /* Discord brand color */
+            color: #fff;
+            font-size: 14px;
+            cursor: pointer;
+            transition: background-color 0.25s ease-in-out;
+        }
+
+        /* Send Button Hover */
+        #send-button:hover {
+           background-color: #677bc4;
+           transform: scale(1.1);
+           transition: 0.25s ease-in-out;
+        }
+
+
+        .buttons:hover {
+            background-color: #677bc4; /* Darker shade */
+            transform: scale(1.1);
+            transition: 0.25s ease-in-out;
+        }
+
 		.swap-buttons {
 			min-width:23px;
 			text-align: center;
 		}
-		#chatbox {
-			display: flex;
-			min-height:40px;
-			width:250px;
-			transition: 0.13s;
-			transition-delay:700ms;
-		}
-		#chatbox:hover {
-			width:100%;
-			transition-delay:0ms;
-		}
-		ul#chat-list {
-			list-style: none;
-			padding-left: 0px;
-			overflow-y: scroll;
-			overflow-wrap: break-word;
-		}
-		#chat-list {
-			display:flex;
-			flex-direction: column;
-			margin-top:auto;
-			margin-bottom:0px;
-			width:100%;
-		}
 
-		.chat-message {
-			padding: 3px 0px;
-			background-color: rgba(0, 0, 0, 0.60);
-		}
-		.chat-message:nth-child(2n+1) {
-			background-color:rgba(0, 0, 0, 0.45);
-		}
 
-		.chat-message-timestamp{
-			font-size: 0.7em;
-			line-height: 0.7em;
-			color: rgba(255, 255, 255, 0.6);
-			padding-right: 5px;
-		}
+        /* Chatbox */
+        #chatbox {
+            display: flex;
+            flex-direction: row;
+            width: auto;
+            height: auto;
+            border-radius: 10px;
+        }
 
-		::-webkit-scrollbar {
-			width: 0px;  /* Remove scrollbar space */
-			background: transparent;  /* Optional: just make scrollbar invisible */
-		}
+        /* Chatbox Hover */
+        #chatbox:hover {
+            width: 100%;
+            transition: 0.25s ease-in-out;
+        }
+
+        /* Chat List Unordered List */
+        ul#chat-list {
+            list-style: none;
+            overflow-y: auto; /* Enable vertical scrolling */
+            overflow-wrap: break-word;
+            width: 100%;
+            max-height: 300px; /* Set a maximum height to limit the chat window height */
+        }
+
+        /* Chat List */
+        #chat-list {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+        }
+
+        /* Chat Message */
+        .chat-message {
+            width: auto;
+            height: auto;
+            color: #ffffff; /* Text color */
+            overflow-wrap: break-word;
+            background-color: #40444b; /* Discord message background */
+            border-radius: 10px;
+        }
+
+        /* Chat Message Alternating Rows */
+        .chat-message:nth-child(2n+1) {
+           background-color: #36393f; /* Darker shade */
+        }
+
+        /* Chat Message Timestamp */
+        .chat-message-timestamp {
+            font-size: 0.75em;
+            line-height: 0.75em;
+            width: auto;
+            height: auto;
+            color: #b9bbbe; /* Timestamp color */
+            padding-right: 5px;
+            padding-left: 5px;
+            border-radius: 10px;
+        }
+
+        /* Scrollbar styles */
+        ::-webkit-scrollbar-thumb {
+            background-color: #4f545c; /* Discord scrollbar thumb color */
+            border-radius: 4px;
+        }
 	</style>
+
 	<div id="chat-window">
-		<ul id="chat-list"></ul>
-		<form id="chatbox">
-			<button id="send-button" class="buttons" ng-click="chatSend()">Send</button>
-			<input id="chat-input" type="text" ng-click="select()" placeholder="Chat here"></input>
-			<button id="swap-button" class="buttons swap-buttons" ng-click="chatSwapHorizontal()">🡘</button>
-			<button id="swap-button" class="buttons swap-buttons" ng-click="chatSwapVertical()">🡙</button>
-		</form>
+        <ul id="chat-list"></ul>
+	    <form id="chatbox">
+	        <button id="send-button" class="buttons" ng-click="chatSend()">Send</button>
+	            <input id="chat-input" type="text" ng-click="select()" placeholder="Chat here"></input>
+	        <button id="swap-button" class="buttons swap-buttons" ng-click="chatSwapHorizontal()">🡘</button>
+	        <button id="swap-button" class="buttons swap-buttons" ng-click="chatSwapVertical()">🡙</button>
+	    </form>
 	</div>
 </div>
