--- a/ui/modules/apps/BeamMP-Chat/app.html
+++ b/ui/modules/apps/BeamMP-Chat/app.html
@@ -1,56 +1,52 @@
 <div ng-controller="Chat" id="Chat" class="bngApp multiplayerChat" ng-style="{'width': '100%', 'height': '100%', 'background-color': 'transparent'}" ng-init="init()">
-	<style>
-
-		/*Error Message*/
+    
+    <style>
+        /*Error Message*/
         .error {
-            color:#f04747; /* Discord red */
             border-radius: 10px;
+            background-color: #f44336; /* Red */
+            color: white;
         }
 
-        /* Chat Window */
+        /*Chat Window*/
         #chat-window {
-            flex-direction: column;
-            align-items: flex-start;
-            padding: 20px;
-            background: rgba(54, 57, 63, 0.75); /* Discord dark theme with alpha adjustments. */
+            width: 100%;
+            max-width: fit-content;
+            height: 80%;
+            overflow-y: auto;
+            display: flex; /* Use Flexbox */
+            flex-direction: column; /* Column layout */
+            top: 0;
+            position: sticky;
+            margin-bottom: 10px;
+            background: rgba(54, 57, 63, 0.0); /* Discord dark theme with alpha adjustments. */
             border-radius: 10px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            max-width: 600px;
-            margin: 0 auto;
-            font-family: 'Segoe UI', sans-serif;
         }
 
         /* Chat Input */
         #chat-input {
             width: 100px;
-            transition: width 1s;
             height: 40px;
             border: none;
             border-radius: 10px;
-            padding: 0 15px;
-            margin-right: 5px;
-            margin-left: 5px;
             font-size: 14px;
-            background-color: #40444b; /* Discord input background */
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            transition: width 1s ease-in-out;
-            color: #ffffff; /* Text color */
+            text-align: left;
+            background-color: #40444b;
+            color: #ffffff;
+            z-index: 1;
+            transition: width 0.25s ease-in-out; /* Transition only on focus */
         }
 
-        /* Chat Input Focus */
-        /* Show chat window when the input is focused or chat window is hovered */
-        #chat-input:focus + #chat-window,#chat-window:hover {
-            display: flex;
+        /* Chat Input Expanded */
+        #chat-input[type="text"]:focus {
+           /* Expand when focused */
+           width: calc(100% - 175px);
         }
 
-        /* Placeholder color */
+        /* Chat Input Text Placeholder */
         #chat-input::placeholder {
-            color: #72767d;
-        }
-
-        /* Hover styles for input */
-        #chat-input:hover {
-            width: calc(100% - 120px);
+           color: #72767d;
+           text-align: center;
         }
 
         /* Swap Buttons */
@@ -68,6 +64,13 @@
             border-radius: 10px;
         }
 
+        /* Swap Buttons Hover */
+        .buttons:hover {
+            background-color: #677bc4; /* Darker shade */
+            transform: scale(1.1);
+            transition: 0.25s ease-in-out;
+        }
+
         /* Send Button */
         #send-button {
             width: 50px;
@@ -77,104 +80,95 @@
             margin-right: 5px;
             margin-left: 5px;
             background-color: #7289da; /* Discord brand color */
-            color: #fff;
+            color: #ffffff;
             font-size: 14px;
             cursor: pointer;
             transition: background-color 0.25s ease-in-out;
         }
 
-        /* Send Button Hover */
-        #send-button:hover {
-           background-color: #677bc4;
-           transform: scale(1.1);
-           transition: 0.25s ease-in-out;
-        }
-
-
-        .buttons:hover {
-            background-color: #677bc4; /* Darker shade */
+       /* Send Button Hover */
+       #send-button:hover {
+            background-color: #677bc4;
             transform: scale(1.1);
             transition: 0.25s ease-in-out;
-        }
-
-		.swap-buttons {
-			min-width:23px;
-			text-align: center;
-		}
-
+       }
 
         /* Chatbox */
         #chatbox {
-            display: flex;
-            flex-direction: row;
-            width: auto;
-            height: auto;
-            border-radius: 10px;
-        }
-
-        /* Chatbox Hover */
-        #chatbox:hover {
             width: 100%;
-            transition: 0.25s ease-in-out;
+            max-width: 100%;
+            position: sticky;
+            bottom: 0;
         }
 
         /* Chat List Unordered List */
         ul#chat-list {
-            list-style: none;
-            overflow-y: auto; /* Enable vertical scrolling */
             overflow-wrap: break-word;
             width: 100%;
-            max-height: 300px; /* Set a maximum height to limit the chat window height */
+            max-width: fit-content;
+            height: auto;
         }
 
         /* Chat List */
         #chat-list {
-            display: flex;
-            flex-direction: column;
+            max-width: fit-content;
+            height: auto;
             width: 100%;
         }
 
         /* Chat Message */
         .chat-message {
-            width: auto;
-            height: auto;
-            color: #ffffff; /* Text color */
-            overflow-wrap: break-word;
-            background-color: #40444b; /* Discord message background */
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            max-width:fit-content;
+            padding: 5px 5px 5px 5px;
             border-radius: 10px;
+            word-wrap: break-word;
+            white-space: normal;
+            color: #ffffff;
+            overflow-wrap: break-word;
+            background-color: #40444b;
+            margin-top: 10px; /* Adjust spacing between messages */
+            margin-bottom: 10px; /* Adjust spacing between messages */
+            position: relative; /* Enable positioning of children */
         }
 
         /* Chat Message Alternating Rows */
         .chat-message:nth-child(2n+1) {
-           background-color: #36393f; /* Darker shade */
-        }
+            border-radius: 10px;
+            background-color: #36393f; /* Darker shade for alternate messages */
+         }
 
         /* Chat Message Timestamp */
         .chat-message-timestamp {
+            display: inline;
+            width:fit-content;
+            max-width:fit-content;
+            left: 0;
             font-size: 0.75em;
             line-height: 0.75em;
-            width: auto;
-            height: auto;
-            color: #b9bbbe; /* Timestamp color */
-            padding-right: 5px;
-            padding-left: 5px;
+            padding: 5px 5px 5px 5px;
             border-radius: 10px;
+            background-color: #40444b; /* Discord message background */
+            color: #b9bbbe; /* Timestamp color */
+            z-index: 1; /* Ensure visibility */
         }
 
-        /* Scrollbar styles */
-        ::-webkit-scrollbar-thumb {
-            background-color: #4f545c; /* Discord scrollbar thumb color */
-            border-radius: 4px;
+        /*Hide Scrollbars*/
+        ::-webkit-scrollbar {
+            display: none;
         }
-	</style>
 
-	<div id="chat-window">
-        <ul id="chat-list"></ul>
-	    <form id="chatbox">
-	        <button id="send-button" class="buttons" ng-click="chatSend()">Send</button>
-	            <input id="chat-input" type="text" ng-click="select()" placeholder="Chat here"></input>
-	        <button id="swap-button" class="buttons swap-buttons" ng-click="chatSwapHorizontal()">🡘</button>
-	        <button id="swap-button" class="buttons swap-buttons" ng-click="chatSwapVertical()">🡙</button>
-	    </form>
-	</div>
+    </style>
+
+    <div id="chat-window">
+        <ul id="chat-list" class="message-list"></ul>
+    </div>
+        <form id="chatbox" style="position: sticky;">
+            <button id="send-button" class="buttons" ng-click="chatSend()">Send</button>
+            <input id="chat-input" type="text" ng-click="select()" placeholder="Chat Here">
+            <button id="swap-button" class="buttons swap-buttons" ng-click="chatSwapHorizontal()">🡘</button>
+            <button id="swap-button" class="buttons swap-buttons" ng-click="chatSwapVertical()">🡙</button>
+        </form>
 </div>
