Updated BeamMP Chat
Updated app.json app version to 1.1

Updated app.css AND app.html to say BeamMP instead of BeamNG. (Accidental past typos.)

--- a/ui/modules/apps/BeamMP-Chat/app.html
+++ b/ui/modules/apps/BeamMP-Chat/app.html
@@ -80,7 +80,7 @@
 
             /*Buttons Hover Styling*/
             .buttons:hover {
-                background-color: rgb(212, 100, 26, 1.0); /*BeamNG Orange */
+                background-color: rgb(212, 100, 26, 1.0); /*BeamMP Orange */
             }
 
             /*Swap Button Styling*/
