--- a/ui/modules/multiplayer/multiplayer.html
+++ b/ui/modules/multiplayer/multiplayer.html
@@ -6,7 +6,8 @@
     <div id="LoadingBody">
 		<md-button style="right:0; top:0; margin:0;" class="button close-button" ng-class="" ng-click="multiplayer.closeLoadingPopup()"> X </md-button>
         <h1>{{:: 'ui.multiplayer.connecting' | translate}}</h1>
-        <span id="LoadingStatus">{{:: 'ui.multiplayer.connectingToServer' | translate}}</span>
+        <span id="OriginalLoadingStatus">{{:: 'ui.multiplayer.connectingToServer' | translate}}</span>
+		<span id="LoadingStatus" hidden></span>
     </div>
 </div>
 
