--- a/ui/modules/vehicleconfig/partial.parts.html
+++ b/ui/modules/vehicleconfig/partial.parts.html
@@ -19,7 +19,7 @@
       ng-mouseleave="vehConf_parts.deselectPart(vehConf_parts.stickyPartSelection)">
       <div ng-switch-when="false" style="padding-left:1em">
         <!-- Tree mode -->
-        <div ng-repeat="entry in vehConf_parts.d.data track by entry.slot" ng-include="'vehicle-config-tree'"></div>
+        <div ng-repeat="entry in vehConf_parts.d.data track by entry.name" ng-include="'vehicle-config-tree'"></div>
       </div>
       <div ng-switch-when="true">
         <!-- List mode -->
@@ -29,13 +29,13 @@
           <div ng-if="vehConf_parts.partSearchQuery['slot']" class="inputName" flex>Slot</div>
           <div flex style="min-width:50%;padding-right:40px;">Active part</div>
         </div>
-        <div ng-repeat="entry in vehConf_parts.searchResults track by entry.slot">
+        <div ng-repeat="entry in vehConf_parts.searchResults track by entry.name">
           <div ng-mouseover="vehConf_parts.selectParts($event, entry)" style="position:relative">
             <div layout="row" layout-align="space-between center" ng-class="{'highlightChanged': entry.changed}"
               ng-if="entry.options.length > 0">
 
               <div flex class="inputName"
-                ng-bind-html="entry.name | highlightResults: vehConf_parts.partSearchQuery['name']"></div>
+                ng-bind-html="entry.description | highlightResults: vehConf_parts.partSearchQuery['name']"></div>
               <div ng-if="vehConf_parts.partSearchQuery['slot']" flex class="inputName"
                 ng-bind-html="entry.slot | highlightResults: vehConf_parts.partSearchQuery['slot']"></div>
               <md-select ng-model="entry.val" ng-change="vehConf_parts.partConfigChanged(entry)" aria-label="_"
@@ -43,7 +43,7 @@
                 <md-option md-no-ink
                   ng-repeat="opt in entry.options | orderBy : [vehConf_parts.emptyFront, 'name'] track by $index"
                   ng-value="opt.val"
-                  ng-bind-html="((vehConf_parts.partSearchQuery['partname'] ? ((opt.val != '') ? (opt.val + ' - ') : '') : '') | highlightResults: vehConf_parts.partSearchQuery['partname']) + (opt.name | highlightResults: vehConf_parts.partSearchQuery['name'])"
+                  ng-bind-html="((vehConf_parts.partSearchQuery['partname'] ? ((opt.val != '') ? (opt.val + ' - ') : '') : '') | highlightResults: vehConf_parts.partSearchQuery['partname']) + (opt.description | highlightResults: vehConf_parts.partSearchQuery['name'])"
                   style="white-space:nowrap">
                 </md-option>
               </md-select>
@@ -118,6 +118,9 @@
       <div style="flex: 1 1 auto;">
         <md-checkbox bng-sound-class="bng_checkbox_generic" ng-model="vehConf_parts.showAuxiliary" md-no-ink flex>
           <md-icon class="material-icons">report</md-icon> {{:: "ui.showAuxiliary" | translate}}
+        </md-checkbox>
+        <md-checkbox bng-sound-class="bng_checkbox_generic" ng-model="vehConf_parts.displayNames" ng-change="vehConf_parts.recalcTree();" md-no-ink flex>
+          {{:: 'ui.vehicleconfig.displayNames' | translate}}
         </md-checkbox>
         <md-checkbox bng-sound-class="bng_checkbox_generic" ng-model="vehConf_parts.simple" ng-change="vehConf_parts.recalcTree();" md-no-ink flex>
           {{:: 'ui.vehicleconfig.simpleTree' | translate}}
